[package]
name = "discord-rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
poise = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper="0.16"
regex = "1.11.1"
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
tracing = "0.1.37"